# lfric_reader

./: README.md
src/cxx/: CMakeLists.txt
src/cxx/test/: CMakeLists.txt
